language/move-lang/tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.exp
error[E01004]: invalid assignment
   ┌─ tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.move:14:19
   │
14 │         (_, _, _, s.f) = four();
   │                   ^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error[E01004]: invalid assignment
   ┌─ tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.move:15:19
   │
15 │         (_, _, _, *r_ref) = four();
   │                   ^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

